[gd_scene load_steps=10 format=3 uid="uid://m2l085losfh4"]

[ext_resource type="Script" path="res://scripts/piece.gd" id="1_dqy27"]
[ext_resource type="Texture2D" uid="uid://bysbxhg2iwnhv" path="res://sprite/Mini FX, Items & UI/Mini FX, Items & UI/Common Pick-ups/Coin (16 x 16).png" id="2_nrjoo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e2rym"]
atlas = ExtResource("2_nrjoo")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb7rd"]
atlas = ExtResource("2_nrjoo")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsrjs"]
atlas = ExtResource("2_nrjoo")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1vrh"]
atlas = ExtResource("2_nrjoo")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_24pfv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e2rym")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb7rd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsrjs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1vrh")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_ijc2o"]
radius = 40.0

[sub_resource type="CircleShape2D" id="CircleShape2D_s1iwq"]
radius = 8.0

[node name="piece" type="RigidBody2D"]
gravity_scale = 0.0
sleeping = true
script = ExtResource("1_dqy27")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_24pfv")
autoplay = "default"
frame_progress = 0.776054

[node name="zone_attraction" type="Area2D" parent="."]

[node name="interaction" type="CollisionShape2D" parent="zone_attraction"]
shape = SubResource("CircleShape2D_ijc2o")

[node name="CollisionArea2D" type="Area2D" parent="."]

[node name="collision" type="CollisionShape2D" parent="CollisionArea2D"]
shape = SubResource("CircleShape2D_s1iwq")

[connection signal="area_entered" from="zone_attraction" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="zone_attraction" to="." method="_on_interaction_area_area_exited"]
